# ClaudeCodeControler

./: .gitignore  README.md  index.html  package-lock.json  package.json  test-hook.md
.claude/: 1.txt  settings.local.json
hooks/: claude-wrapper.ps1  claude-wrapper.sh  hook.template.ps1  hook.template.sh
scripts/: install.ps1  install.sh
src/: main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  database.rs  hook_server.rs  installer.rs  lib.rs  main.rs  models.rs  monitor.rs
src/components/: Dashboard.tsx  History.tsx  Hooks.tsx  Install.tsx  Sidebar.tsx  index.ts
src/hooks/: index.ts  useConfig.ts  useHook.ts  useInstaller.ts  useInstances.ts
src/types/: index.ts
