[package]
name = "claude-code-monitor"
version = "1.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [ "process-relaunch", "path-all", "shell-open", "shell-execute", "fs-all", "os-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
sysinfo = "0.30"
rusqlite = { version = "0.30", features = ["bundled"] }
# Use fixed versions that don't require Rust 2024
chrono = { version = "=0.4.31", default-features = false, features = ["clock", "serde", "std"] }
time = { version = "=0.3.30", default-features = false }
time-core = { version = "=0.1.2" }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1.6", features = ["v4"] }
dirs = "5.0"
home = "=0.5.9"
which = "5.0"

[[bin]]
name = "claude-code-monitor"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
